--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body.lock {
     --fw-r: 300;
     --fw-m: 500;
     --fw-b: 700;
+    --fs-10: 0.625rem;
     --fs-12: 0.75rem;
     --fs-13: 0.813rem;
     --fs-16: 1rem;
@@ -33,6 +34,7 @@ body.lock {
     --fs-28: 1.75rem;
     --fs-30: 1.875rem;
     --fs-32: 2rem;
+    --fs-37: 2.313rem;
     --fs-40: 2.5rem;
     --fs-48: 3rem;
     --fs-60: 3.75rem;
