--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 .header {
     display: flex;
     flex-direction: column;
-    
+
 }
 
 .header-top-bar {
@@ -67,7 +67,7 @@
 .header-content {
     width: 100%;
     height: 650px;
-    background-image: url(../assets/images/header-bg.png);
+    background-image: url(../assets/images/header-bg.webp);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -83,12 +83,12 @@
     position: absolute;
     width: 400px;
     height: 175px;
-    background: url(../assets/images/header-ufo.png);
+    background: url(../assets/images/header-ufo.webp);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    left:-60px;
-    top:30px;
+    left: -60px;
+    top: 30px;
 }
 
 .header-content::after {
@@ -97,7 +97,7 @@
     display: block;
     width: 400px;
     height: 250px;
-    background: url(../assets/images/header-rocket.png);
+    background: url(../assets/images/header-rocket.webp);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -141,4 +141,3 @@
     height: 4px;
     background: var(--main-content-color);
 }
-
